# student-management

./: .gitignore  LICENSE  README.md  components.json  index.html  package.json  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  release.yml
drizzle/: 0000_smart_eddie_brock.sql  0001_aberrant_charles_xavier.sql  0002_majestic_layla_miller.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
src/: App.tsx  main.tsx  splashscreen.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: main.rs
src/components/common/: DeletePrompt.tsx  Spinner.tsx
src/components/ui/: alert-dialog.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  toast.tsx
src/database/: encryption.ts  schema.ts
src/database/actions/: batch.ts  class.ts  index.ts  payment.ts  student.ts
src/lib/: sql.ts  utils.ts
src/pages/: DetailsPageLayout.tsx  ListLayout.tsx  Settings.tsx  layout.tsx  page.tsx
src/pages/[content]/: page.tsx  utils.ts
src/pages/[content]/[contentId]/: BatchStudents.tsx  page.tsx
src/pages/[content]/[contentId]/edit/: page.tsx
src/pages/[content]/create/: page.tsx
src/pages/attendence/: page.tsx
src/pages/batches/: page.tsx
src/pages/batches/[batchId]/: BatchStudents.tsx  page.tsx
src/pages/batches/[batchId]/edit/: page.tsx
src/pages/batches/[classId]/: page.tsx
src/pages/batches/create/: page.tsx
src/pages/classes/: page.tsx
src/pages/classes/[classId]/: page.tsx
src/pages/classes/[classId]/edit/: page.tsx
src/pages/classes/create/: page.tsx
src/pages/students/: page.tsx
src/pages/students/[studentId]/: CreatePayment.tsx  DeletePayment.tsx  PaymentHistory.tsx  UpdatePayment.tsx  page.tsx
src/pages/students/[studentId]/edit/: page.tsx
src/pages/students/create/: page.tsx
