[package]
name = "student-management"
version = "1.2.0"
description = "An app for managing payments for coaching centers."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.5", features = [ "fs-read-file", "fs-write-file",
    "path-all",
    "dialog-open",
    "dialog-save",
    "updater",
] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "sqlite",
] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
