[package]
name = "student-management"
version = "1.2.0"
description = "An app for managing payments for coaching centers."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-store = "2"
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-sql = { features = ["sqlite"], version = "2" }
serde_json = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.2.1"
